crux-mir/test/symb_eval/num/checked_div.good
test checked_div/56a4cdf6::crux_test[0]: returned 65, FAILED

failures:

---- checked_div/56a4cdf6::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_div.rs:3:5: 3:10: error: in checked_div/56a4cdf6::div_signed[0]
[Crux]   attempt to compute `_3 / _4`, which would overflow
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_div.rs:3:5: 3:10: error: in checked_div/56a4cdf6::div_signed[0]
[Crux]   attempt to divide `_3` by zero
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_div.rs:8:5: 8:10: error: in checked_div/56a4cdf6::div_unsigned[0]
[Crux]   attempt to divide `_3` by zero

[Crux] Overall status: Invalid.
